log
Sun, Mar 16, 2025  3:31:21 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Sun, Mar 16, 2025  6:37:56 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:34:10: error: 'List {aka struct List}' has no member named 'size'
     lista->size = 0 ;
          ^~
list.c:35:5: error: 'list' undeclared (first use in this function)
     list->current = NULL ;
     ^~~~
list.c:35:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
316edd7
Sun, Mar 16, 2025  6:38:15 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:34:10: error: 'List {aka struct List}' has no member named 'size'
     lista->size = 0 ;
          ^~
Compilation failed
f2d6004
Sun, Mar 16, 2025  6:40:08 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0ab0b99
Sun, Mar 16, 2025  6:56:05 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2e3ee38
Sun, Mar 16, 2025  6:56:47 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
60979bd
Sun, Mar 16, 2025  6:58:13 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
33b4b1f
Sun, Mar 16, 2025  6:58:56 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
89d4e88
Sun, Mar 16, 2025  7:01:50 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
9976adc
Sun, Mar 16, 2025  7:02:56 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4b0eb63
Sun, Mar 16, 2025  7:03:45 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
8c40051
Sun, Mar 16, 2025  7:04:09 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
8c54d9c
Sun, Mar 16, 2025  7:05:00 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
00f9da9
Sun, Mar 16, 2025  7:05:34 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
4340e67
